# yanvm

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: args.rs  config.rs  consts.rs  helpers.rs  install.rs  installer.rs  links.rs  macros.rs  main.rs  versions.rs
src/versions/: index.rs
