[package]
name = "yanvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cfg-if = "1.0.0"
clap = { version = "3.2.8", features = ["derive"] }
dialoguer = "0.10.1"
directories = "4.0.1"
futures-util = "0.3.21"
indicatif = "0.16.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11.11", features = ["stream", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
