[package]
name = "yanvm"
version = "0.1.0"
edition = "2021"
description = "A NodeJS version manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cfg-if = "1.0.0"
clap = { version = "3.2.12", features = ["derive"] }
dialoguer = "0.10.1"
directories = "4.0.1"
futures-util = "0.3.21"
indicatif = "0.16.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
quork = "0.1.1"
reqwest = { version = "0.11.11", features = ["stream", "json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tar = "0.4.38"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[target.'cfg(windows)'.dependencies]
zip = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1.0.24"

[target.'cfg(target_os = "linux")'.dependencies]
xz2 = "0.1.7"
